Customers portal : Fixed a bug on profile picture edition. Button was not working on Firefox.
SVN:trunk[4254]

--- a/datamodels/2.x/itop-portal-base/portal/web/css/portal.scss
+++ b/datamodels/2.x/itop-portal-base/portal/web/css/portal.scss
@@ -515,6 +515,10 @@ footer{
 	max-height: 175px;
 	overflow: hidden;
 }
+#user-profile-wrapper .user_profile_picture .preview img{
+	max-width: 100%;
+	max-height: 100%;
+}
 #user-profile-wrapper .user_profile_picture .actions{
 	display: inline-block;
 	vertical-align: top; /*middle;*/
